Changed a reference to the pandemic and the text in All done! section to be relevant on its own and into the future

--- a/Lab1_colab.ipynb
+++ b/Lab1_colab.ipynb
@@ -45,7 +45,7 @@
       "source": [
         "# Colab tutorial\n",
         "Valerie Carr  \n",
-        "Last updated: Aug 23, 2021  \n",
+        "Last updated: Oct 17, 2021  \n",
         "\n",
         "**Purpose**: To provide a tutorial for new users of Google Colab that includes how to create text and code cells, how to format text, and how to write simple code and view its output"
       ]
@@ -152,6 +152,12 @@
         "id": "M-Hfe_jcnhF-"
       },
       "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n",
         "# Hello, this is heading 1\n",
         "## And this is heading 2 "
       ]
@@ -201,7 +207,7 @@
         "        * My fourth point is even more indented\n",
         "* My fifth point is not\n",
         "\n",
-        "Once you understand, \"run\" this cell to return to the nicely formatted view. Then, insert a *new* text cell below to practice creating a bulleted list, including indentation. Specifically, create a list of the top three places you want to visit most after the pandemic. Hit `shift` + `enter` once you're done."
+        "Once you understand, \"run\" this cell to return to the nicely formatted view. Then, insert a *new* text cell below to practice creating a bulleted list, including indentation. Specifically, create a list of the top three places you want to visit most in the future. Hit `shift` + `enter` once you're done."
       ]
     },
     {
@@ -255,7 +261,7 @@
         "id": "HPN2oWLsnhGE"
       },
       "source": [
-        "As a reminder, code cells can also contain **comments**, which are lines of text that are *not* evaluated as code. Comments are used to write brief notes about specific lines of code, and are precded by the `#` symbol. In the example below I've included a comment and some code. Run the cell to see what happens."
+        "As a reminder, code cells can also contain **comments**, which are lines of text that are *not* evaluated as code. Comments are used to write brief notes about specific lines of code, and are preceded by the `#` symbol. In the example below I've included a comment and some code. Run the cell to see what happens."
       ]
     },
     {
@@ -331,7 +337,7 @@
       },
       "source": [
         "## All done!\n",
-        "Please return to the main Zoom room to check in with your instructors, after which you can sign out of Zoom. As a reminder, these lab activities are simply for practice and are not graded. You don't need to submit them anywhere!"
+        "You now know the basics of creating and updating Colab notebooks! In Module 2, we will begin learning the basics of programming in Python. "
       ]
     }
   ]
