Added header image

--- a/Lab1_colab.ipynb
+++ b/Lab1_colab.ipynb
@@ -40,6 +40,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "hgZVXKidRoRT"
+      },
+      "source": [
+        "![picture](https://mcgrawect.princeton.edu/wp-content/uploads/2020/10/colab_lg.png')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "SdOKjwrynhF7"
       },
       "source": [
