Added note to save a copy in Drive

--- a/Lab1_colab.ipynb
+++ b/Lab1_colab.ipynb
@@ -62,6 +62,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "2Kjl_d_Pdxrw"
+      },
+      "source": [
+        "## Before You Begin\n",
+        "Click the \"Copy to Drive\" button just above this document. Then, follow along with the instructions in your copy, and save the changes that you make along the way."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "2JRigyfbnhF8"
       },
       "source": [
