Made changes suggested by Valerie

--- a/Lab1_colab.ipynb
+++ b/Lab1_colab.ipynb
@@ -43,7 +43,8 @@
         "id": "hgZVXKidRoRT"
       },
       "source": [
-        "![picture](https://mcgrawect.princeton.edu/wp-content/uploads/2020/10/colab_lg.png')"
+        "![picture](https://images.pexels.com/photos/7191994/pexels-photo-7191994.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=700&h=250&fit=crop)  \n",
+        "Photo by SHVETS production from Pexels\n"
       ]
     },
     {
@@ -52,11 +53,16 @@
         "id": "SdOKjwrynhF7"
       },
       "source": [
-        "# Colab tutorial\n",
-        "Valerie Carr  \n",
-        "Last updated: Oct 17, 2021  \n",
+        "# APEX Faculty Training, Module 1: Colab Basics\n",
+        "Created by Valerie Carr and Jaime Zuspann  \n",
+        "Licensed under Creative Commons/MIT License  \n",
+        "Last updated: Oct 19, 2021  \n",
         "\n",
-        "**Purpose**: To provide a tutorial for new users of Google Colab that includes how to create text and code cells, how to format text, and how to write simple code and view its output"
+        "**Learning outcomes**\n",
+        "To learn how to use Google Colab to:\n",
+        "1. Create text and code cells\n",
+        "2. Format text\n",
+        "3. Write simple code and view its output"
       ]
     },
     {
@@ -65,8 +71,10 @@
         "id": "2Kjl_d_Pdxrw"
       },
       "source": [
-        "## Before You Begin\n",
-        "Click the \"Copy to Drive\" button just above this document. Then, follow along with the instructions in your copy, and save the changes that you make along the way."
+        "## 0. Make a copy!\n",
+        "This file is view only, meaning that you can't edit it. To create an editable copy, look towards the top of the notebook and click on `Copy to Drive`. This will cause a new tab to open with your own personal copy.\n",
+        "\n",
+        "If you want to refer back to your copy in the future, you can find it in Google Drive in a folder called `Colab Notebooks`."
       ]
     },
     {
@@ -171,12 +179,6 @@
         "id": "M-Hfe_jcnhF-"
       },
       "source": [
-        "\n",
-        "\n",
-        "```\n",
-        "# This is formatted as code\n",
-        "```\n",
-        "\n",
         "# Hello, this is heading 1\n",
         "## And this is heading 2 "
       ]
@@ -197,6 +199,19 @@
       },
       "source": [
         "You can also write in \"regular\" sized font (like what I've written in this cell), simply by *not* including any `#` symbols. To practice, start by inserting a new code cell below, and convert it to text. Then, using heading 2 font size, write a short heading of your choosing. Beneath that, write a sentence in \"regular sized\" text. Finally, hit `shift` + `enter`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xhd7R2pbu_lM"
+      },
+      "source": [
+        "You can also format text to appear as code. You might wish to show the structure of a bit of code without making it runnable or to set apart a bit of text as ```code```. If you double-click within this cell, you'll see that you can format text as code by wrapping it between three accent marks (grave accents) on either side.\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "my_number = 17\n",
+        "```"
       ]
     },
     {
@@ -339,14 +354,12 @@
       },
       "source": [
         "## 5. Documenting your notebooks\n",
-        "Note that, at the top of this notebook, I've included the following information:\n",
+        "Note that, at the top of this notebook, I've included the following information. It is standard practice, both in the classroom and in the work place, to include this type documentation in all of your notebooks.\n",
         "\n",
         "* Title of the notebook\n",
-        "* My name \n",
-        "* The date that I last updated the notebook\n",
-        "* The purpose of the notebook\n",
-        "\n",
-        "It is standard practice, both in the classroom and in the work place, to include this documentation in all of your notebooks! Go ahead and include your own name at the top, instead of mine. You can also add your group members' names, as well, as a record of who you worked with and who you might look to for help."
+        "* Who created the notebook\n",
+        "* The date that the notebook was last updated\n",
+        "* The learning outcomes or purpose"
       ]
     },
     {
