--- a/Module2a_datatypes.ipynb
+++ b/Module2a_datatypes.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.1"
     },
     "colab": {
-      "name": "Module2a_datatypes.ipynb",
+      "name": "Module2_datatypes.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "-DFmkSC3DcrF",
@@ -43,7 +43,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module2a_datatypes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module2_datatypes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -52,7 +52,7 @@
         "id": "U2VoRlVpDcqd"
       },
       "source": [
-        "# Lab 2a: Datatypes\n",
+        "# Module 2: Datatypes\n",
         "Name: Valerie Carr  \n",
         "Last updated: 8/25/21\n",
         "\n",
