Update and rename Module2b_strings.ipynb to Module3_strings.ipynb
Changed name to Module 3

--- a/Module3_strings.ipynb
+++ b/Module3_strings.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.1"
     },
     "colab": {
-      "name": "Lab2b_strings_solutions.ipynb",
+      "name": "Module3_strings_solutions.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module2b_strings.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module3_strings.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,7 +43,7 @@
         "id": "L3vFn9_lzweJ"
       },
       "source": [
-        "# Lab 2b: Strings\n",
+        "# Module 3: Strings\n",
         "Name: Valerie Carr     \n",
         "Last updated: Aug 31, 2021  \n",
         "\n",
