Finished through section 3

--- a/Module3_strings.ipynb
+++ b/Module3_strings.ipynb
@@ -40,14 +40,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "tcP2h0QW0A6X"
+      },
+      "source": [
+        "<img src='https://images.pexels.com/photos/247819/pexels-photo-247819.jpeg?w=700&h=250&fit=crop' height=300px witdth=700px>  "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "L3vFn9_lzweJ"
       },
       "source": [
-        "# Module 3: Strings\n",
-        "Name: Valerie Carr     \n",
-        "Last updated: Aug 31, 2021  \n",
+        "# APEX Faculty Training, Module 3: Strings\n",
+        "Created by Valerie Carr and Jaime Zuspann  \n",
+        "Licensed under Creative Commons/MIT License  \n",
+        "Last updated: Oct 30, 2021  \n",
         "\n",
-        "Purpose: To gain practice with strings and string operators"
+        "**Learning outcomes**  \n",
+        "1. To learn another Python data type: Strings\n",
+        "2. To gain practice with strings and string operators"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LiPDUmfw3Np7"
+      },
+      "source": [
+        "## Remember: Make a copy"
       ]
     },
     {
@@ -68,11 +89,99 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "92XS6HDw3dtR"
+      },
+      "source": [
+        "## 2. Determining data type  \n",
+        "### 2a. The `type()` function  \n",
+        "Python has a built-in function that can be used to determine data type: `type()`. This function can be used to directly determine a value's type or to determine the type of value assigned to a variable.  \n",
+        "\n",
+        "Run the cells below to see how the `type()` function works on various inputs and feel free to try your own."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W2n55OBr9mgP"
+      },
+      "source": [
+        "type(6)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qhEy9M6G9omU"
+      },
+      "source": [
+        "type(3.14)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eCq9kY2t9qi3"
+      },
+      "source": [
+        "type(False)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hEXyOfig9svv",
+        "outputId": "98747354-39f6-444b-8e3d-3f801ef6a902",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = 6 * 4\n",
+        "type(a)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tviipT9y-uQD"
+      },
+      "source": [
+        "### 2b. So why does Python have different data types?  \n",
+        "In everyday life, we treat letters and numbers differently:  \n",
+        "* We can multiply, divide, or square numbers  \n",
+        "* We can use letters to form words and sentences  \n",
+        "* But, \"economics\" divided by \"psychology\" doesn't make sense  \n",
+        "\n",
+        "In other words, we perform different operations on numbers than we do on letters. Python is exactly the same. By knowing the data type, Python knows what operations can be performed."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "xteTOWiezweK"
       },
       "source": [
-        "## 2. Determining data type\n",
-        "Each of the cells below contains a value. Insert the built-in function `type()` in front of each value to determine its data type."
+        "### Try it yourself  \n",
+        "Each of the cells below contains a value. Insert the built-in function `type()` in front of each value to determine its data type. Remember that the input should go between the parentheses of the function."
       ]
     },
     {
@@ -85,7 +194,8 @@
         "outputId": "7cc55096-b4c7-4a2e-b8f6-07139a28bb42"
       },
       "source": [
-        "type(False)"
+        "# 2a. 1) \n",
+        "False"
       ],
       "execution_count": null,
       "outputs": [
@@ -111,7 +221,8 @@
         "outputId": "9976ed28-be8c-4cda-d84a-bc57b90319c3"
       },
       "source": [
-        "type(164.80)"
+        "# 2a. 2) \n",
+        "164.80"
       ],
       "execution_count": null,
       "outputs": [
@@ -137,7 +248,8 @@
         "outputId": "8c252275-5938-4e8e-ea7e-b452ccb5a53d"
       },
       "source": [
-        "type(106)"
+        "# 2a. 3) \n",
+        "106"
       ],
       "execution_count": null,
       "outputs": [
@@ -163,7 +275,8 @@
         "outputId": "69f2ab81-0b4b-4c0b-d923-23975c29e19f"
       },
       "source": [
-        "type('Did you watch any of the shows that your classmates recommended?')"
+        "# 2a. 4) \n",
+        "'Are you enjoying learning Python so far?'"
       ],
       "execution_count": null,
       "outputs": [
@@ -198,8 +311,8 @@
         "outputId": "7617a6e6-c32a-4ed4-9477-9ba710a92e43"
       },
       "source": [
-        "answer = 'yes'\n",
-        "type(answer)"
+        "# 2a. 5) \n",
+        "answer = 'yes'\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -221,7 +334,15 @@
         "id": "_vYLpuqNzweY"
       },
       "source": [
-        "## 3. Strings"
+        "## 3. Strings  \n",
+        "So far, we have learned three different Python data types: integers, floats, and booleans. Now, we'll introduce the fourth type, strings.  \n",
+        "\n",
+        "A string is a data type that you can think of as text or characters. Letters, punctuation, symbols, spaces, and numbers (when treated as text) can be used in a string.  \n",
+        "\n",
+        "* 'Hello World!'\n",
+        "* 'a'\n",
+        "* '555-123-4567'\n",
+        "* '#strings'"
       ]
     },
     {
@@ -231,11 +352,70 @@
       },
       "source": [
         "### 3a. Quotes\n",
-        "The way we tell Python that something is a string is by putting quote marks around it. Python doesn't care if you use single or double quotes. Start by chatting with your group about what type of quotes you'll use moving forward (there's no right answer, just be consistent!).\n",
+        "The way we tell Python that something is a string is by putting quote marks around it. Python doesn't care if you use single or double quotes. Throughout these modules, you'll see that single quotes are used for strings, but you can choose which you prefer to use, neither is more correct than the other. The important thing is to stay consistent.  \n",
         "\n",
-        "Then, on line 2 in the cell below, create the variable `course_num` and assign it our course number (ENGR120) as a string using single quotes. Repeat the process on line 4, but use double quotes, and then finally try using no quotes on line 6. \n",
-        "\n",
-        "When you run the cell, you'll get an error. Chat with your group about which line of code causes the error, and why."
+        "Try running the cells below to see the difference quotes make for a number."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RFQc_jW_Havy",
+        "outputId": "470793e3-91b2-4115-d888-e5feec57e362",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(2021)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jd64MRNpHd1L",
+        "outputId": "691c2006-c4a0-4e50-847e-e38061af00f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type('2021')"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1lSVA2Abqojm"
+      },
+      "source": [
+        "Now, assign the variable `course_num` with the code for the course you will use Python in, as a string with single quotes. For instance: `course_num = 'ENGR120'`. Then do the same thing, but try using double quotes around the string. Finally, try not using any quotes at all, and see what happens when you run the cell. "
       ]
     },
     {
@@ -249,6 +429,7 @@
         "outputId": "7be9de36-17b4-4da7-c141-65767a997030"
       },
       "source": [
+        "# 3a. 1) \n",
         "# Single quotes\n",
         "course_num = 'ENGR120'\n",
         "# Double quotes\n",
@@ -274,10 +455,30 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "n-akXs5SscJ0"
+      },
+      "source": [
+        "Do you get a `NameError` when you don't use any quotes around the string? That is because Pyton doesn't know that it was meant as a string and is trying to treat it a different way, specifically, as a variable. However, since it wasn't defined as a variable previously, Python doesn't recognize it and therefore throws an error."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "75BVOVVudE5x"
+      },
+      "source": [
+        "### 3b. Print  \n",
+        "Python has another built in function called `print()`. This function \"prints\" any string you provide as input, that is, it displays the string on the console when the function is run. Unlike the input, the output will not display the quote marks.  \n",
+        "\n",
+        "To see how this works, follow the steps below."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "BdJpRtKjzweb"
       },
       "source": [
-        "### 3b. Print\n",
         "First, run the cell below, which contains a string:"
       ]
     },
@@ -289,7 +490,7 @@
       "source": [
         "econ = 'The four letter abbreviation for economics is ECON'"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -298,7 +499,7 @@
         "id": "SCW5fGvDzwee"
       },
       "source": [
-        "On line 2 of the cell below, simply type `econ` (i.e., the variable name) and run the cell. In the cell below that, use the built-in function `print()` with the variable name inside the parentheses. Chat with your group about how the output for the two cells is different. Later in the semester, we'll do much more interesting things with the print function!"
+        "On line 2 of the cell below, simply type `econ` (i.e., the variable name) and run the cell. In the cell below that, use the built-in function `print()` with the variable name inside the parentheses. Can you see how the outut for the two cells are different? In later modules, we'll do much more interesting things with the print function!"
       ]
     },
     {
@@ -309,13 +510,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "96b01938-5cc6-4d63-c004-9142913040eb"
+        "outputId": "abefc251-f784-47b6-bf5b-59d381614b36"
       },
       "source": [
-        "# Variable only\n",
-        "econ"
+        "# Variable only\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -328,7 +528,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 2
         }
       ]
     },
@@ -342,8 +542,7 @@
         "outputId": "34b9c6e0-70a5-405b-911c-995a98e3c7c1"
       },
       "source": [
-        "# Print variable\n",
-        "print(econ)"
+        "# Print variable\n"
       ],
       "execution_count": null,
       "outputs": [
