Revised according to style/format of previous modules

--- a/Module3_variables.ipynb
+++ b/Module3_variables.ipynb
@@ -49,27 +49,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "U2VoRlVpDcqd"
+        "id": "d4RBrWC-jk0h"
       },
       "source": [
-        "# Module 3: Variables\n",
-        "\n",
-        "Created by Valerie Carr and Jaime Zuspann  \n",
-        "Last updated: Nov 7, 2021  \n",
-        "\n",
-        "**Learning outcomes**  \n",
-        "To learn about variables:\n",
-        "• What a variable is and how to name it\n",
-        "• How to assign values to variables"
+        "<img src='https://cdn.pixabay.com/photo/2017/01/12/21/19/search-1975707_1280.jpg' width=700>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JjI68d04fcgp"
+        "id": "U2VoRlVpDcqd"
       },
       "source": [
-        "Remember to click the Copy to Drive button before you begin so you can make changes in your own copy of the module."
+        "# APEX Faculty Training, Module 3: Variables\n",
+        "\n",
+        "Created by Valerie Carr and Jaime Zuspann  \n",
+        "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
+        "Last updated: Nov 14, 2021  \n",
+        "\n",
+        "**Learning outcomes**  \n",
+        "To learn about variables:  \n",
+        "• What a variable is and how to name it  \n",
+        "• How to assign values to variables  "
       ]
     },
     {
@@ -78,7 +79,9 @@
         "id": "YmLWJKQSDcqe"
       },
       "source": [
-        "## 1. Make a Copy and Document your notebook\n"
+        "## 1. Make a Copy and Document your notebook  \n",
+        "• Click the Copy to Drive button before you begin so you can make changes in your own copy of the module.  \n",
+        "• Update the cell above with your name and the date\n"
       ]
     },
     {
@@ -99,7 +102,10 @@
         "id": "ZVF6Tz1H97Kn"
       },
       "source": [
-        "To assign a value to a variable:  \n",
+        "Here's an example of assigning a value to a variable:  \n",
+        "`variable_name = 17`  \n",
+        "  \n",
+        "Here are a few important things to remember when assigning a value to a variable:  \n",
         "* The variable name always comes first  \n",
         "* Then an equal sign followed by the value  \n",
         "`x = 3 #assigns the value 3 to the variable x`  \n",
@@ -151,7 +157,7 @@
         "id": "K2m7jsR1_JLS"
       },
       "source": [
-        "If you run the code above, you'll see that there is no output. Assignment doesn't return a value. You can check if the values were assigned properly by simply typing the variable names on their own lines and running them. Note: if you put them in the same code cell, the output will only show the value stored in the last variable."
+        "If you run the code above, you'll see that there is no output (though the second code cell returns an error because the format was incorrect). Assignment doesn't return a value. You can check if the values were assigned properly by simply typing the variable names on their own lines and running them. Note: if you put them in the same code cell, the output will only show the value stored in the last variable."
       ]
     },
     {
@@ -209,6 +215,48 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "6W2iBuVortKB"
+      },
+      "source": [
+        "<font color='red'>Exercise 1</font>  \n",
+        "In the code cell below, create a variable `fav_num` and assign to it your favorite number"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XRvLGt62r9VX"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pcmE3ohgsCbV"
+      },
+      "source": [
+        "<font color='red'>Exercise 2</font>  \n",
+        "Now, type the variable name by itself below, and run the cell to see the value returned as the output"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9_Y9MQHSsRqc"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "tFtDiNnXMlJ0"
       },
       "source": [
@@ -217,7 +265,7 @@
         "---\n",
         "\n",
         "\n",
-        "#### Note: `=` vs `==`  \n",
+        "#### <font color='blue'>Note:</font> `=` vs `==`  \n",
         "We learned earlier that `==` is a Boolean operator that returns either `True` or `False` depending on whether it's operands are equal to each other. Now we see that `=` is an assignment operator--it assigns values to variables.  \n",
         "\n",
         "`x = 17` assigns the value 7 to the variable x, regardless of any value x might have held before  \n",
@@ -236,9 +284,10 @@
         "id": "hbFSFYm6_070"
       },
       "source": [
+        "### Updating variable values  \n",
         "The value assigned to a variable is not permanently stored. That is, you can change the value later as necessary.  \n",
         "  \n",
-        "Say you wish to update `age` after you initially stored the value of 20 to it. You can do that with exactly the same process:"
+        "Say you wish to update `age` after you initially stored the value of 20 to it. You can do that with exactly the same process: type the variable name followed by an equals sign and the new value."
       ]
     },
     {
@@ -252,7 +301,7 @@
       },
       "source": [
         "age = 21\n",
-        "age #this will output the current value of age, after reassigning it in the previous line"
+        "age # this will output the current value of age, after reassigning it in the previous line"
       ],
       "execution_count": null,
       "outputs": [
@@ -317,6 +366,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "6WXwIlFQuQ9z"
+      },
+      "source": [
+        "<font color='red'>Exercise 3</font>  \n",
+        "Multiply the variable `fav_num` from the last exercise with the value 3.14 to see the output."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r8mFrS37uiI0"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "9szLBjzuBU-6"
       },
       "source": [
@@ -336,8 +406,8 @@
       },
       "source": [
         "# valid variable name\n",
-        "engr120 = 89\n",
-        "engr120 #this should output 89"
+        "may_05 = 5\n",
+        "may_05 #this should output 5"
       ],
       "execution_count": null,
       "outputs": [
@@ -365,7 +435,7 @@
       },
       "source": [
         "# invalid variable name\n",
-        "120engr = 89 #this will cause an error even before the variable is used"
+        "05_may = 5 #this will cause an error even before the variable is used"
       ],
       "execution_count": null,
       "outputs": [
@@ -406,6 +476,7 @@
         "id": "2W8FccHJDFh-"
       },
       "source": [
+        "*Naming rules continued...*  \n",
         "* Can't use spaces within multi-word variables. A space ends the current variable name."
       ]
     },
@@ -440,6 +511,7 @@
       },
       "source": [
         "* Can't use *reserved words*  \n",
+        "\n",
         ">There is a small set of reserved words with special meaning in Python. They include:  \n",
         "><table>\n",
         "  <tr>\n",
@@ -482,6 +554,7 @@
         "    <td>yield</td>\n",
         "  </tr>\n",
         "</table>  \n",
+        "  \n",
         "Dogs understand a small number of words in English, like treat, dinner, leash, walk, car, etc. You only use the words around a dog when you really mean it, bc the dog will automatically react. Same thing with Python – if you use these words, it will automatically try to do something.\n",
         "\n"
       ]
@@ -499,10 +572,31 @@
         "* Use meaningful names  \n",
         "Your colleagues and your future self will thank you!  \n",
         ">Say you need a variable name for \"number of states\".  \n",
-        ">- number_of_states is too long  \n",
-        ">- n is short, but not meaningful  \n",
-        ">- n_states is both short and meaningful"
+        ">- `number_of_states` is too long  \n",
+        ">- `n` is short, but not meaningful  \n",
+        ">- `n_states` is both short and meaningful"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WLdzQC_iwcaK"
+      },
+      "source": [
+        "<font color='red'>Exercise 4</font>  \n",
+        "Try to come up with what you believe to be the best choice of variable name for the current score of Player 1 in a game. Assign the value 42 to your chosen variable name below. Remember, there aren't exactly right or wrong answers here, just try to stick with the tips above."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MjazK_AhxTk0"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -513,13 +607,13 @@
         "### Python is Literal  \n",
         "Reminder: Python, like a calculator, will do exactly what you tell it to do, not what you *want* it to do.  \n",
         "\n",
-        "Imagine you create the variable n_states. Python will complain if you mistype any of the following later in your code - it doesn't autocorrect!  \n",
+        "Imagine you create the variable `n_states`. Python will complain if you mistype any of the following later in your code - it doesn't autocorrect!  \n",
         "\n",
-        ">n_status  \n",
-        "n_state  \n",
-        "N_states  \n",
+        ">`n_status`  \n",
+        "`n_state`  \n",
+        "`N_states`  \n",
         "\n",
-        "If you create a variable and later mistype it, you'll get a NameError. Try running the code cell below."
+        "If you create a variable and later mistype it, you'll get a NameError. Try running the code cell below to see this error."
       ]
     },
     {
@@ -559,8 +653,9 @@
       },
       "source": [
         "## Try it yourself   \n",
-        "The practice for these sections will be a little out of order from how we presented it. This is the order you will actually use them in.  \n",
+        "The practice for these sections will be a little out of order from how it is presented in this module. This order is more like how you'll create variables in a program.   \n",
         "### Choosing valid names (from section 2c.)\n",
+        "<font color='red'>Exercise 5</font>  \n",
         "Below are some variable names to represent the price of a Hello Kitty mug. Note that I've purposefully made a few invalid names that will cause an error message. Before you run the cells, try to determine which ones will return an error, and what is wrong with them. Then run the cells. Which is the best choice? Would another option be better?"
       ]
     },
@@ -654,6 +749,7 @@
         "### Assigning values to variables (from section 2.)  \n",
         "Let's practice assigning values to variables. We'll assign a new value to a variable that's already been used, and we'll assign a value to a brand new variable.  \n",
         "\n",
+        "<font color='red'>Exercise 6</font>  \n",
         "In the cell below, assign the price you think is appropriate to `hello_kitty` (our hello kitty mug):"
       ]
     },
@@ -663,7 +759,7 @@
         "id": "-CiPUjbZXauc"
       },
       "source": [
-        "# 2. 1) Assign new value to hello_kitty\n"
+        "# Assign new value to hello_kitty\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -674,6 +770,7 @@
         "id": "nSPMRcqYX1c7"
       },
       "source": [
+        "<font color='red'>Exercise 7</font>  \n",
         "Now try creating a new variable (remember the naming tips) for the sale price of the mug when it goes 30% off. Use a mathematical expression to assign the correct value."
       ]
     },
@@ -683,7 +780,7 @@
         "id": "TXYrCQJYYZ9E"
       },
       "source": [
-        "# 2. 2) Create and assign new variable for hello kitty mug on sale\n"
+        "# Create and assign new variable for hello kitty mug on sale\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -695,6 +792,7 @@
       },
       "source": [
         "### Using variables in expressions (from section 3.)\n",
+        "<font color='red'>Exercise 8</font>  \n",
         "Next, let's practice using a variable name inside a mathematical expression. In the cell below, write a mathematical expression to determine the following: the value assigned to `hello_kitty` squared"
       ]
     },
@@ -704,7 +802,7 @@
         "id": "tceZ_8bPDcrP"
       },
       "source": [
-        "# 3. 1) hello_kitty squared\n"
+        "# hello_kitty squared\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -715,6 +813,7 @@
         "id": "88kMyYIjDcrS"
       },
       "source": [
+        "<font color='red'>Exercise 9</font>  \n",
         "We can also use variables inside Boolean expressions. In the cell below, write a Boolean expression to determine if the value assigned to `hello_kitty` is greater than or equal to 10. "
       ]
     },
@@ -724,7 +823,7 @@
         "id": "9qsbdyvzDcrT"
       },
       "source": [
-        "# 3. 2) is hello_kitty greater than or equal to 10?\n"
+        "# is hello_kitty greater than or equal to 10?\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -736,6 +835,7 @@
       },
       "source": [
         "### Importance of consistent capitalization, spelling, and pluralization (from section 4.)\n",
+        "<font color='red'>Exercise 10</font>  \n",
         "Remember, Python is very literal and doesn't autocorrect! In the space below, try repeating your Boolean expression from above, but purposefully make a mistake in how the variable is capitalized. Does it make sense why you receieved an error?"
       ]
     },
@@ -745,7 +845,7 @@
         "id": "uoQkH-v3DcrV"
       },
       "source": [
-        "# 4. 1) hello_kitty greater than or equal to 10, with mistake\n"
+        "# hello_kitty greater than or equal to 10, with mistake in variable name\n"
       ],
       "execution_count": null,
       "outputs": []
